chore: 新規 API のレスポンス整理
